--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,4 @@
 # For how it is generated, see `hack/generate-authors.sh`.
 
 Muhammad Ibrahim Baba <ibrahimmuhamad271@gmail.com>
+Maryliz Karumba <marylizkarumba791@gmail.com>
